import Foundation

public enum LocalizationKey: String {
    case commonNext = "common.next"
    case commonSkip = "common.skip"
    case commonStart = "common.start"
    case onboardingKeywordTitle = "onboarding.keyword.title"
    case onboardingKeywordContent = "onboarding.keyword.content"
    case onboardingMapTitle = "onboarding.map.title"
    case onboardingMapContent = "onboarding.map.content"
    case onboardingFavoriteTitle = "onboarding.favorite.title"
    case onboardingFavoriteContent = "onboarding.favorite.content"
    case loginSocialKakao = "login.social.kakao"
    case loginSocialApple = "login.social.apple"
    case loginSocialGoogle = "login.social.google"
    case greetingMessage = "greeting_message"
    case homeDescription = "home_description"
    case loginButton = "login_button"
}